status_app_prom/k8s/app.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: go-status-code-prom
  labels:
    app: go-status-code-prom
spec:
  ports:
  - port: 8080
    name: http
  selector:
    app: go-status-code-prom
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: go-status-code-prom
  labels:
    app: go-status-code-prom
spec:
  replicas: 1
  selector:
    matchLabels:
      app: go-status-code-prom
  template:
    metadata:
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/path: /metrics
        prometheus.io/port: "8080"
      labels:
        app: go-status-code-prom
    spec:
      containers:
      - name: go-status-code-prom
        image: docker.io/danielinclouds/go-status-code-prom:v2
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8080
