status_app_prom/k8s/gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: go-status-code-prom-gateway
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: go-status-code
spec:
  hosts:
  - "*"
  gateways:
  - go-status-code-prom-gateway
  http:
  - match:
    - uri:
        prefix: /status
    - uri:
        prefix: /metrics
    route:
    - destination:
        host: go-status-code-prom
        port:
          number: 8080
